Fixed div containers and positioning is where it's supposed to be(no overflowing... for now)

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -32,7 +32,7 @@ li {
     z-index: 1000;
     height: 35px;
     align-items: center;
-    margin: 10px auto;
+    margin: auto;
     width: 65vw;
     box-shadow: 0px 1px 5px #747474;
 }
@@ -202,12 +202,12 @@ input:checked + .slider:before {
     }
 
     /* General */
-    .container {
+    /* .container {
         display: flex;
         justify-content: center;
         align-items: center;
 
-    }
+    } */
 
     .firstname {
         padding-right: 55px;
@@ -225,7 +225,7 @@ input:checked + .slider:before {
         font-size: 50px !important;
     }
 
-    .resume-button {
+    /* .resume-button {
         position: relative;
         right:auto;
         margin-right: 8%;
@@ -233,5 +233,5 @@ input:checked + .slider:before {
         width: 150% !important;
         font-size: 3rem !important;
         cursor: pointer;
-    }
+    } */
 }
