--- a/src/components/TypingAnimation/TypingAnimation.css
+++ b/src/components/TypingAnimation/TypingAnimation.css
@@ -1,8 +1,2 @@
-.typewriter {
-    position: relative;
-    font-family: 'Poppins Regular', sans-serif;
-    font-weight:bold;
-    font-size: 1.8em;
-    bottom: 18%;
-}
+
 
