--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -5,40 +5,47 @@ body {
 }
 
 .container {
+    border: 5px solid blue;
+    width: 85vw;
+    height: 200vw;
+    margin: 0 auto;
+}
+
+.section {
     display: flex;
     position: relative;
-    margin-top: 50px;
-    top: 2pt;
-    left: 20pt;
-    margin-bottom: 20px;
+    margin: 30px auto;
     padding-bottom: 15pt;
     padding-top: 18pt;
     border-radius: 30px;
-    width: 325pt;
+    width: 85vw;
     box-shadow: 0px 1px 5px #747474;
-    margin-bottom: 10%;
 }
 
+.section-content {
+    margin: 0 8% 0 0;
+    padding-left: 20px;
+}
 
 .heading {
     font-family: 'Poppins Extra Bold';
+    flex-wrap: wrap;
+    line-height: 1;
     font-size: 5em;
 }
 
-.lastname {
-    position: relative;
-    bottom: 12%;
+.typewriter {
+    font-family: 'Poppins Regular', sans-serif;
+    font-weight:bold;
+    font-size: 1.6em;
+
 }
 
 .grouped-icons {
     display: flex;
-    /* border: 1px solid black; */
-    margin: 0;
-    padding: 0;
-    position: relative;
-    justify-content: space-around;
-    bottom: 19pt;
-    left: 34.5pt;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 50px 0 0;
 }
 
 .icon {
@@ -56,27 +63,19 @@ body {
 .resume-button {
     font-family: 'Poppins Bold', sans-serif;
     position: relative;
-    top: 3.1px;
+    bottom: 5px;
     font-size: 1em;
     border-radius: 5px;
     margin-left: 5px;
-    width: 8rem;
-    height: 3.027rem;
-    border: 0px;
+    width: 150%;
+    height: 48.43px;
+    border: 0;
     box-shadow: 0px 0px 5px #747474;
     cursor: pointer;
 }
 
-.container-content {
-    margin: 0 8% 0 0;
-    position: relative;
-    top: 10%;
-    left: 5%;
-    padding: 0;
-}
-
 /* About Section */
 
-.about-content {
-    padding-bottom: 40pt;
+.about-me {
+    
 }
